added media queries to adjust scaling

--- a/index.html
+++ b/index.html
@@ -29,48 +29,50 @@
         </header>
 
         <hr>
-        <section class="word-grid-section">
+        <div class="game-container">
+            <section class="word-grid-section">
 
-        </section>
+            </section>
 
-        <section class="keyboard">
-            <div class="keyboard-row1">
-                <button class="key">Q</button>
-                <button class="key">W</button>
-                <button class="key">E</button>
-                <button class="key">R</button>
-                <button class="key">T</button>
-                <button class="key">Y</button>
-                <button class="key">U</button>
-                <button class="key">I</button>
-                <button class="key">O</button>
-                <button class="key">P</button>
-            </div>
+            <section class="keyboard">
+                <div class="keyboard-row1">
+                    <button class="key">Q</button>
+                    <button class="key">W</button>
+                    <button class="key">E</button>
+                    <button class="key">R</button>
+                    <button class="key">T</button>
+                    <button class="key">Y</button>
+                    <button class="key">U</button>
+                    <button class="key">I</button>
+                    <button class="key">O</button>
+                    <button class="key">P</button>
+                </div>
 
-            <div class="keyboard-row2">
-                <button class="key">A</button>
-                <button class="key">S</button>
-                <button class="key">D</button>
-                <button class="key">F</button>
-                <button class="key">G</button>
-                <button class="key">H</button>
-                <button class="key">J</button>
-                <button class="key">K</button>
-                <button class="key">L</button>
-            </div>
+                <div class="keyboard-row2">
+                    <button class="key">A</button>
+                    <button class="key">S</button>
+                    <button class="key">D</button>
+                    <button class="key">F</button>
+                    <button class="key">G</button>
+                    <button class="key">H</button>
+                    <button class="key">J</button>
+                    <button class="key">K</button>
+                    <button class="key">L</button>
+                </div>
 
-            <div class="keyboard-row3">
-                <button class="key">Enter</button>
-                <button class="key">Z</button>
-                <button class="key">X</button>
-                <button class="key">C</button>
-                <button class="key">V</button>
-                <button class="key">B</button>
-                <button class="key">N</button>
-                <button class="key">M</button>
-                <button class="key"><i class="fa-solid fa-delete-left"></i></button>
-            </div>
-        </section>
+                <div class="keyboard-row3">
+                    <button class="key">Enter</button>
+                    <button class="key">Z</button>
+                    <button class="key">X</button>
+                    <button class="key">C</button>
+                    <button class="key">V</button>
+                    <button class="key">B</button>
+                    <button class="key">N</button>
+                    <button class="key">M</button>
+                    <button class="key"><i class="fa-solid fa-delete-left"></i></button>
+                </div>
+            </section>
+        </div>
     </div>
 
     <div class="modal hidden">
@@ -123,13 +125,14 @@
     <div class="window">
 
         <div class="window-about">
-           <div class="about-header">
-               <h2>About</h2>
-               <button class="window-close">X</button>
-           </div>
+            <div class="about-header">
+                <h2>About</h2>
+                <button class="window-close">X</button>
+            </div>
 
 
-            <p class="window-content">A wordle clone by Christopher Garcia. Created with Javascript, HTML, and CSS. Game dictionary contains over 4000 curated words. </p>
+            <p class="window-content">A wordle clone by Christopher Garcia. Created with Javascript, HTML, and CSS. Game
+                dictionary contains over 4000 curated words. </p>
 
 
         </div>
