--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <button class="key">B</button>
                     <button class="key">N</button>
                     <button class="key">M</button>
-                    <button class="key"><i class="fa-solid fa-delete-left"></i></button>
+                    <button class="key">Delete</button>
                 </div>
             </section>
         </div>
