--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 
             <p class="window-content">A wordle clone by Christopher Garcia. Created with Javascript, HTML, and CSS. Game
-                dictionary contains over 4000 curated words. </p>
+                dictionary contains over 4000 words. </p>
 
 
         </div>
